[package]
name = "postcss"
version = "0.0.1"
description = "🚀 Fast and 100% API compatible postcss replacer"
authors = ["迷渡 <justjavac@gmail.com>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/justjavac/postcss-rs"
license = "MIT"
keywords = ["css", "syntax", "postcss", "parser", "ast"]

[dependencies]
regex = "1"
lazy_static = "1"
smol_str = "0.1.18"
memchr = "2.4"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
debug = true

[dev-dependencies]
criterion = { version="0.3", features = ["html_reports"] }

[lib]
# `cargo bench` Gives "Unrecognized Option" Errors for Valid Command-line Options
# https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
bench = false

[[bin]]
name = "postcss"
# `cargo bench` Gives "Unrecognized Option" Errors for Valid Command-line Options
# https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
bench = false

[[bench]]
name = "tokenizer"
harness = false
