[package]
name = "postcss"
version = "0.0.2"
description = "🚀 Fast and 100% API compatible postcss replacer"
authors = ["迷渡 <justjavac@gmail.com>", "CGQAQ <m.jason.liu@outlook.com>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/justjavac/postcss-rs"
license = "MIT"
keywords = ["css", "syntax", "postcss", "parser", "ast"]
exclude = ["assets/*", "adapter/*", ".*"]

[dependencies]
memchr = "2.4"
once_cell = "1.8.0"
serde = { version = "1.0", features = ["derive", "std", "rc"] }
serde_json = "1.0.68"
ropey = "1.3.1"
regex = "1.5.4"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
debug = true

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }
pretty_assertions = "0.7.2"

[lib]
# `cargo bench` Gives "Unrecognized Option" Errors for Valid Command-line Options
# https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
bench = false

[[bin]]
name = "postcss"
# `cargo bench` Gives "Unrecognized Option" Errors for Valid Command-line Options
# https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
bench = false

[[bench]]
name = "tokenizer_bench"
harness = false
