[package]
name = "recursive-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
tokenizer = { path = "../tokenizer" }
thiserror = "1.0.29"

codespan-reporting = "0.11.1"
[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[dev-dependencies]
criterion = "0.3.5"
similar-asserts = "1.1.0"
anyhow = "1.0.47"

[[bench]]
name = "parse"
harness = false
